# JoiEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
demo/: main.cpp
include/L&P/: ExprToken.hpp  expression.hpp  lexer.hpp  parser.hpp
include/TUtils/: TUtils.hpp
include/ast/: expr.hpp
include/ast/Nodes/: ASTNode.hpp  NumberNode.hpp  OperatorNode.hpp  VariableNode.hpp
include/vulkan/: VulkanApp.hpp  VulkanInitializer.hpp
include/vulkan/commands/: CommandBuffers.hpp  CommandPool.hpp  UniformBuffer.hpp
include/vulkan/core/: Instance.hpp  LogicalDevice.hpp  PhysicalDevice.hpp  Surface.hpp  Swapchain.hpp
include/vulkan/data/: CubeData.hpp  MobiusData.hpp  ModelGenerator.hpp  ScrewData.hpp  ShellData.hpp  SpiralData.hpp  ToroidalData.hpp  TriangleData.hpp
include/vulkan/data/MathMeshes/: KleynData.hpp  ModelGenerator.hpp  ToroidalData.hpp
include/vulkan/data/SimulationMeshes/: CubeData.hpp
include/vulkan/data/SimulationMeshes/Lighthing/: LightingData.hpp
include/vulkan/pipeline/: FrameBuffers.hpp  ImageViews.hpp  PipelineBuilder.hpp  RenderPass.hpp
include/vulkan/render/: GridVertex.hpp  PushConstants.hpp  Transform.hpp  Vertex.hpp
include/vulkan/renderer/: Camera.hpp  DrawFrame.hpp  Mesh.hpp  Renderable.hpp  Scene.hpp  Texture2D.hpp
include/vulkan/resources/: DepthResources.hpp  QueueFamilyIndices.hpp
include/vulkan/sync/: SyncObjects.hpp
include/vulkan/utils/: VulkanUtils.hpp
include/vulkan/window/: WindowInit.hpp
modules/pyModules/bodyTracker/: bindings.cpp  handTracker.cpp  hand_tracker.py
resources/gltfModels/: scene.gltf
resources/shaders/: frag.glsl  frag.spv  vert.glsl  vert.spv
resources/shaders/grid/: frag.glsl  frag.spv  vert.glsl  vert.spv
resources/shaders/mesh/: frag.spv
src/L&P/: TUtils.cpp  lexer.cpp
src/vulkan/: VulkanApp.cpp  VulkanInitializer.cpp
src/vulkan/commands/: CommandBuffers.cpp  CommandPool.cpp  UniformBuffer.cpp
src/vulkan/core/: Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  Surface.cpp  Swapchain.cpp
src/vulkan/data/SimulationMeshes/: LightingData.cpp
src/vulkan/pipeline/: FrameBuffers.cpp  ImageViews.cpp  PipelineBuilder.cpp  RenderPass.cpp
src/vulkan/renderer/: Camera.cpp  DrawFrame.cpp  Mesh.cpp  Scene.cpp  Texture2D.cpp
src/vulkan/resources/: DepthResources.cpp
src/vulkan/sync/: SyncObjects.cpp
src/vulkan/utils/: VulkanUtils.cpp
src/vulkan/window/: WindowInit.cpp
